--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,7 +44,7 @@ application{
   enableAutoVerify=false
   insertInitialData=true
   authentication{
-    enableDevAutoLogin=true
+    enableDevAutoLogin=false
     enableDevAutoVerify=false
     enableDevAutoAdmin=false
     defaultUser={
@@ -149,6 +149,16 @@ mail.reply="No reply <no-reply@webknossos.org>"
 #  mock = true
 #  host = localhost
 #}
+
+mail.smtp {
+  # https://app.mailgun.com/app/domains/webknossos.org/credentials
+  host="smtp.mailgun.org"
+  port=587
+  tls=true
+  auth=true
+  user="postmaster@webknossos.org"
+  pass="owx7ERsPXsoZ74ZhzdZWKCHiKFXnCKRt"
+}
 
 # other settings
 play.http.parser.maxMemoryBuffer=250M
