Preserve certain state properties on some sites during reload and navigation (#2281)
* add libdefs for react-router and libdef stubs for antd, preserve certain state properties on some site during reload and navigation (#2265)

* replace state persistence HOC with two functions, address PR feedback (#2281)

* apply PR feedback (#2281)

* add persistence to additional admin views, renew admin snapshots (#2281)

--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "mjs": "^1.0.0",
     "moment": "^2.19.3",
     "pako": "^0.2.8",
+    "prop-types": "https://github.com/scalableminds/prop-types",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-google-charts": "^1.5.5",
