--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -14,6 +14,9 @@ silhouette {
   tokenAuthenticator.authenticatorIdleTimeout=23000 days
   tokenAuthenticator.authenticatorExpiry=23000 days //must fit as seconds in 32bit signed int
 
+  tokenAuthenticator.resetPasswordExpiry=1 day
+  tokenAuthenticator.dataStoreExpiry=1 day
+
   # OAuth1 token secret provider settings
   oauth1TokenSecretProvider.cookieName="OAuth1TokenSecret"
   oauth1TokenSecretProvider.cookiePath="/"
