--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,7 +48,7 @@ application{
   enableAutoVerify=false
   insertInitialData=true
   authentication{
-    enableDevAutoLogin=false
+    enableDevAutoLogin=true
     enableDevAutoVerify=false
     enableDevAutoAdmin=false
     defaultUser={
