enable eslint cache

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ dev-db/
 docker-compose.override.yml
 app/assets/javascripts/test/snapshots/debug-htmls/*
 !app/assets/javascripts/test/snapshots/debug-htmls/.gitkeep
+.eslintcache
