--- a/conf/application.conf
+++ b/conf/application.conf
@@ -122,9 +122,9 @@ play.http.parser.maxMemoryBuffer=250M
 play.http.parser.maxDiskBuffer=1G
 
 postgres = {
-  url = "jdbc:postgresql://localhost/webknossos"
+  url = "jdbc:postgresql://postgres/webknossos"
   driver = org.postgresql.Driver
   keepAliveConnection = true
-  user = "postgres"
-  password = "postgres"
+  user = "webknossos"
+  password = ""
 }
